--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,11 +68,10 @@ jobs:
           distribution: 'temurin'
           cache: gradle
 
-      - name: Checkout the code
-        uses: actions/checkout@v3
-
-      - name: Run tests
-        uses: ./gradlew testDebugUnitTest
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+      - name: Run lint
+        run: ./gradlew testDebugUnitTest
 
       - name: Upload test report
         uses: actions/upload-artifact@v4
